# clinics_project

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  answers.txt  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: ci.yml
app/: conftest.py  main.py
app/api/: api_metadata.py
app/api/v1/: rest_models.py  router_appointments.py
app/core/: config.py  custom_logger.py
app/database/: admin.py  connection.py  models.py
app/exceptions/: exceptions.py  exceptions_handlers.py
app/services/: service_appointments.py
app/tests/: conftest.py  test_appointments.py
appointment/app/: main.py
appointment/app/api/: api_metadata.py
appointment/app/api/v1/: rest_models.py  router_appointments.py
appointment/app/core/: config.py  custom_logger.py
appointment/app/database/: connection.py  models.py
appointment/app/exceptions/: exceptions.py  exceptions_handlers.py
appointment/app/services/: service_appointments.py
doc_artefacts/: ER.md  README.md  activity.md  architect_scheme.md  project_realization.md
telegram_bot/: README.md
